# CompMath

./: README.md
src/: CMakeLists.txt
src/labs/CubicSpline/: CubicSpline.h
src/labs/DerivativeCoef/: DerivativeCoef.h
src/labs/NewtonInterpolator/: NewtonInterpolator.h
src/labs/integrate/: integrate.h
tests/: CMakeLists.txt  test_CubicSpline.cpp  test_DerivativeCoef.cpp  test_HermiteInterpolator.cpp  test_integrate.cpp
